--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -3,6 +3,6 @@
   <%= simple_form_for [@restaurant, @review] do |f| %>
     <%= f.input :content %>
     <%= f.input :rating %>
-    <%= f.button :submit, class: "btn btn-success" %>
+    <%= f.button :submit, class: "btn btn-success btn-sm" %>
   <% end %>
 </div>
